syntax="proto3";

package messages;

option go_package = "/";

service ChatService {
    rpc Login(LoginRequest) returns (LoginResponse) {};

    rpc ChatStream(stream Messages) returns (stream Messages) {};
}

message LoginRequest {
    string userName = 1;
    string password = 2;;
}

message LoginResponse {
    string token = 1;
}

message Messages {
    string from = 1;
    string to = 2;
    string content = 3;
    string timestamp = 4;
    MessageType type = 5;
}

enum MessageType {
    MESSAGE = 0;
    USERJOIN =  1;
    USERLEFT = 2;
}